--- a/css/main.css
+++ b/css/main.css
@@ -197,9 +197,9 @@ a.innerborder:hover img {
 
 */
 .mt_img_text{float:left;margin-left:360px;margin-top:330px}
-.mt_img_text p{color:white;text-align:left;font-size: 0;}
-.mt_img_text p:first-child{font-size:0;font-weight:bold;line-height:50px;}
-.mt_img_text p:last-child{font-size:0;line-height:35px;}
+.mt_img_text p{color:white;text-align:left;}
+.mt_img_text p:first-child{font-size:45px;font-weight:bold;line-height:50px;}
+.mt_img_text p:last-child{font-size:20px;line-height:35px;}
 /* content*/
 .swiper-container_top img{max-width:100%}
 .mt_img{width:100%;height:963px;}
