--- a/css/sub.css
+++ b/css/sub.css
@@ -92,7 +92,7 @@ body,#wrap{width:100%;height:100%}
 .user_flow img{width:1500px;height:292px}
 .tab1_content{margin-top:450px;clear:both;}
 .tab1_content h3{text-align:center;font-size:30px;font-weight:bold;}
-.movie_wrap{margin-top:40px;width:100%;}
+.movie_wrap{margin-top:40px;width:100%;height:675px;}
 .practice_info_wrap{margin-top:90px;overflow: hidden;}
 .practice_info_wrap dl{float:left;width:calc(20% - 30px);padding-left:30px}
 .practice_info_wrap dt{color:#f7941c;font-family:'Montserrat' !important;font-size:25px;font-weight:bold;width:15px;text-decoration:underline}
