--- a/css/sub.css
+++ b/css/sub.css
@@ -193,6 +193,38 @@ body,#wrap{width:100%;height:100%}
 .customer{margin-top:185px;width:100%;margin-bottom:237px;overflow: hidden;}
 .phone{width:1500px;background:#f7941c;height:515px;float:left;}
 .cs{width:908px;height:255px;background:#006eb7;float:right;margin-top:-255px;}
+.round-title{
+	text-align: center;
+	margin: 50px 0 30px;
+}
+.round-title .num{
+	display: block;
+	width: 30px;
+	height: 30px;
+	line-height: 30px;
+	margin: 0 auto 10px;
+	background-color: #f7941c;
+	font-weight: 400;
+	font-size: 16px;
+	border-radius: 50%;
+	color: #fff;
+}
+.round-title.blue .num{
+	background-color: #006eb7;
+}
+.round-title .title{
+	font-weight: 700;
+	font-size: 32px;
+	color: #f7941c;
+}
+.round-title.blue .title{
+	color: #006eb7;
+}
+.round-title .text{
+	margin: 10px 0 0;
+	font-size: 18px;
+	font-weight: 400;
+}
 
 
 @media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
