--- a/css/sub.css
+++ b/css/sub.css
@@ -199,6 +199,7 @@ body,#wrap{width:100%;height:100%}
 }
 .round-title .title-wrap{
 	display: flex;
+	align-items: center;
 	justify-content: center;
 	margin: 0 0 10px;
 }
