--- a/css/sub.css
+++ b/css/sub.css
@@ -94,8 +94,9 @@ body,#wrap{width:100%;height:100%}
 .tab1_content h3{text-align:center;font-size:30px;font-weight:bold;}
 .movie_wrap{margin-top:40px;width:100%;height:675px;}
 .practice_info_wrap{margin-top:90px;overflow: hidden;}
-.practice_info_wrap dl{float:left;width:calc(20% - 30px);padding-left:30px}
-.practice_info_wrap dt{color:#f7941c;font-family:'Montserrat' !important;font-size:25px;font-weight:bold;width:15px;text-decoration:underline}
+.practice_info_wrap dl{float:left;width:calc(20% - 30px);padding-left:30px;font-size: 0;}
+.practice_info_wrap dt{display: inline-block;position: relative;padding-left: 30px;color:#f7941c;font-family:'Montserrat' !important;font-size:25px;font-weight:bold;width:auto !important;text-decoration:underline;text-align: left;line-height: 1.5 !important;}
+.practice_info_wrap dt img{position: absolute;left: 0;top: 8px;}
 .practice_info_wrap dd{margin-top:40px;font-size:20px;font-weight:bold;}
 .practice_info_wrap dd span{font-weight:normal;font-size:18px;color:#222;margin-top:20px;display:block;line-height:30px;}
 
@@ -240,3 +241,35 @@ body,#wrap{width:100%;height:100%}
 		 position: fixed;
 	}
   }
+
+.phone-bg-slide{
+	position: relative;
+	width: 536px;
+	height: 718px;
+	padding: 59px 134px 76px 133px;
+	margin: 0 auto;
+	box-sizing: border-box;-moz-box-sizing: border-box;-webkit-box-sizing: border-box;-o-box-sizing: border-box;
+}
+.phone-bg-slide .bg{
+	position: absolute;
+	left: 0;
+	top: 0;
+	display: block;
+	width: 100%;
+	height: 100%;
+	background: url('../images/sub/phone-bg.png') 50% 50% no-repeat;
+	z-index: 90;
+	text-indent: -9999px;
+}
+.phone-bg-slide .slide-area{}
+.phone-bg-slide .slide-wrap{}
+.phone-bg-slide .slide-con{}
+.phone-bg-slide .img{}
+.phone-bg-slide .img img{
+	width: 269px;
+	height: 583px;
+}
+.phone-bg-slide .swiper-button-next,
+.phone-bg-slide .swiper-button-prev{
+	z-index: 999;
+}
