--- a/m/css/sub.css
+++ b/m/css/sub.css
@@ -27,7 +27,7 @@ html,body{height:100%;}
 .sub_title h2{font-weight:bold;font-size:25px;margin-bottom:25px}
 .sub_title p{font-weight:bold;font-size:17px;}
 .sub_title span{margin-top:1.5rem;font-size:14px;color:#535353;display:block;line-height:1.4rem;}
-.sub_tab_wrap{position: absolute;text-align:center;width:90%;margin:0 auto;z-index:2;left:5%}
+.sub_tab_wrap{position: absolute;text-align:center;width:90%;margin:0 auto;z-index:2999;left:5%}
 .sub_tab_wrap ul{padding:0 1.5rem;background:#006eb7;border-bottom-right-radius:20px;border-bottom-left-radius:20px;-webkit-box-shadow: 0px 2px 8px 1px rgba(0,0,0,0.35);
     -moz-box-shadow: 0px 2px 8px 1px rgba(0,0,0,0.35);
     box-shadow: 0px 2px 8px 1px rgba(0,0,0,0.35);}
@@ -217,4 +217,49 @@ html,body{height:100%;}
     top: 0;
     width: 100% !important;
     height: 100% !important;
+}
+.phone-bg-slide{
+	position: relative;
+	width: 95%;
+	height: 0;
+    padding-bottom: 133.95%;
+	margin: 0 auto;
+	box-sizing: border-box;-moz-box-sizing: border-box;-webkit-box-sizing: border-box;-o-box-sizing: border-box;
+}
+.phone-bg-slide .bg{
+	position: absolute;
+	left: 0;
+	top: 0;
+	display: block;
+	width: 100%;
+	height: 100%;
+	background: url('../images/sub/phone-bg.png') 50% 50% no-repeat;
+    background-size: cover;
+	z-index: 90;
+	text-indent: -9999px;
+}
+.phone-bg-slide .slide-area{
+    max-width: 53%;
+    margin: 0 auto;
+}
+.phone-bg-slide .slide-wrap{}
+.phone-bg-slide .slide-con{
+    padding-top: 21.5%;
+}
+.phone-bg-slide .img{
+    position: relative;
+    height: 0;
+    padding-bottom: 216%;
+}
+.phone-bg-slide .img img{
+    position: absolute;
+    left: 0;
+    top: 0;
+    display: block;
+	width: 100%;
+	height: 100%;
+}
+.phone-bg-slide .swiper-button-next,
+.phone-bg-slide .swiper-button-prev{
+	z-index: 999;
 }
