--- a/css/sub.css
+++ b/css/sub.css
@@ -134,7 +134,7 @@ body,#wrap{width:100%;height:100%}
 .marketing img{width:378px}
 .marketing_info_text{margin-top:40px;margin-left:20px;margin-bottom:40px}
 .marketing_info_text h2{font-size:30px;font-weight:bold;margin-bottom:20px;}
-.marketing_info_text p{font-size:18px;height:115px;line-height:28px;;}
+.marketing_info_text p{font-size:18px;height:115px;line-height:28px;}
 .marketing_info_text span{font-family:'Montserrat' !important;font-size:15px}
 .marketing.on{border:1px solid #006eb7;-webkit-box-shadow: 3px 6px 13px 0px rgba(0,0,0,0.16);
 	-moz-box-shadow: 3px 6px 13px 0px rgba(0,0,0,0.16);
