--- a/css/main.css
+++ b/css/main.css
@@ -153,18 +153,6 @@ dd{color:#666;padding:50px;font-size:20px;line-height:34px;border-top:1px solid 
   .scrollmenu_wrap li:first-child span{display:none;line-height:32px;}
   .scrollmenu_wrap li:nth-child(2){margin-bottom:0;background:#1099f3;font-size:23px;margin-top:25px;height:60px;padding-top:35px}
   .scrollmenu_wrap li a{color:white;font-size:23px;}
-a.innerborder, a.innerborder img { 
-  float: left; 
-  overflow:hidden; 
-  margin-bottom:20px
-} 
-a.innerborder:hover { 
-  border:25px solid #006eb7; 
-  margin-bottom:40px
-} 
-a.innerborder:hover img { 
-  margin: -25px
-} 
 .btn{width:260px;height:70px;text-indent:-99999px;background:url('../images/main/btn_viewall.png') no-repeat;cursor: pointer;margin:0 auto}
 .btn:hover{background:url('../images/main/btn_viewall_hover.png') no-repeat;transition:all .7s ease;}
 .ad_btn{width:260px;height:70px;text-indent:-99999px;background:url('../images/main/btn_adslide_more.png') no-repeat;cursor: pointer;margin:50px auto 0 auto}
@@ -223,4 +211,32 @@ a.innerborder:hover img {
   #floatMenu {
        position: fixed;
   }
+}
+
+.ad6_list .innerborder{
+  position: relative;
+  display: block;
+  width: 360px;
+  height: 527px;
+  margin-bottom: 20px;
+  box-sizing: border-box;
+}
+.ad6_list .innerborder::before{
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 0;
+  display: block;
+  width: 100%;
+  height: 100%;
+  border: 25px solid transparent;
+  box-sizing: border-box;
+}
+.ad6_list .innerborder:hover::before { 
+  border-color: #006eb7; 
+} 
+.ad6_list .innerborder img{
+  display: block !important;
+  width: 100%;
+  height: 100%;
 }
