--- a/css/main.css
+++ b/css/main.css
@@ -220,6 +220,9 @@ dd{color:#666;padding:50px;font-size:20px;line-height:34px;border-top:1px solid 
   height: 527px;
   margin-bottom: 20px;
   box-sizing: border-box;
+  background-position: 50% 50%;
+  background-repeat: no-repeat;
+  text-indent: -9999px;
 }
 .ad6_list .innerborder::before{
   content: '';
