--- a/css/sub.css
+++ b/css/sub.css
@@ -328,3 +328,9 @@ body,#wrap{width:100%;height:100%}
 .menu-list ul a{
 	font-size: 18px;
 }
+.pop_campain .swiper{
+	width: 978px !important;
+}
+.pop_campain .swiper .swiper-slide{
+	padding: 0 74px;
+}
