--- a/m/css/sub.css
+++ b/m/css/sub.css
@@ -313,3 +313,28 @@ html,body{height:100%;}
     box-sizing: border-box;-moz-box-sizing: border-box;-webkit-box-sizing: border-box;-o-box-sizing: border-box;
 	padding: 0 50px;
 }
+.column {
+    display: block;
+    flex-basis: 0;
+    flex-grow: 1;
+    flex-shrink: 1;
+    padding: 0.75rem;
+}
+.menu-list {
+    line-height: 1.25;
+}
+.menu-list a {
+    border-radius: 2px;
+    color: #4a4a4a;
+    display: block;
+    padding: 0.5em 0.75em;
+}
+.menu-list a.is-active {
+    background-color: #3273dc;
+    color: #fff;
+}
+.menu-list li ul {
+    border-left: 1px solid #dbdbdb;
+    margin: 0.75em;
+    padding-left: 0.75em;
+}
