--- a/m/css/sub.css
+++ b/m/css/sub.css
@@ -44,7 +44,7 @@ html,body{height:100%;}
 .sub_cont .practice_info_wrap{margin-top:4rem;padding:0 1.5rem;overflow:hidden}
 .sub_cont .practice_info_wrap dl{overflow: hidden;margin-bottom:1.5rem}
 .sub_cont .practice_info_wrap dl:last-child{margin-bottom:0}
-.sub_cont .practice_info_wrap dt{clear:both;float:left;font-family:'Montserrat' !important;font-size:15px;color:#006eb7;margin-right:2rem}
+.sub_cont .practice_info_wrap dt{clear:both;float:left;font-size:15px;color:#006eb7;margin-right:2rem}
 .sub_cont .practice_info_wrap dd{float:left;font-size:14px;font-weight:bold;line-height: 1.4;}
 .sub_cont .practice_info_wrap dd span{font-weight:normal;margin-top:10px;display:block;}
 .game_info_wrap{width:calc(100% - 3rem);background:#f3f5f7;margin-top:5rem;padding:5rem 1.5rem;margin-bottom:5rem}
@@ -73,7 +73,7 @@ html,body{height:100%;}
 .marketing_info_text{padding:1rem 0.5rem}
 .marketing_info_text h2{font-size:18px;font-weight:bold;margin-bottom:10px;line-height:24px;}
 .marketing_info_text p{font-size:12px;height:112px;line-height:16px;}
-.marketing_info_text span{font-family:'Montserrat' !important;font-size:12px}
+.marketing_info_text span{font-size:12px}
 #popup{width:100%;background:white;border-radius:50px 50px 0 0;position:fixed;-webkit-box-shadow: 0px 6px 43px -1px rgba(0,0,0,0.15);
 	-moz-box-shadow: 0px 6px 43px -1px rgba(0,0,0,0.15);
 	box-shadow: 0px 6px 43px -1px rgba(0,0,0,0.15);z-index:99;}
@@ -125,7 +125,7 @@ html,body{height:100%;}
 .partnership_info_wrap span{font-size:14px;color:#535353;}
 .partnership_info_wrap h3{font-size:17px;line-height:24px;}
 .partnership_info_wrap h3 span{padding:10px;background:#006eb7;color:white;margin-right:15px;display:inline-block;
-    font-size:14px;font-family:'Montserrat' !important;vertical-align:middle;}
+    font-size:14px;vertical-align:middle;}
 .partnership_info_wrap img{margin-bottom:3rem}
 .sub_text_p{font-size:15px;margin:20px 0 40px 0;color:#535353;line-height:24px;}
 @media all and (min-width:425px){
@@ -313,6 +313,9 @@ html,body{height:100%;}
     box-sizing: border-box;-moz-box-sizing: border-box;-webkit-box-sizing: border-box;-o-box-sizing: border-box;
 	padding: 0 50px;
 }
+.pop_campain .swiper .swiper-slide img{
+    max-width: 100%;
+}
 .column {
     display: block;
     flex-basis: 0;
@@ -338,3 +341,4 @@ html,body{height:100%;}
     margin: 0.75em;
     padding-left: 0.75em;
 }
+
