--- a/css/sub.css
+++ b/css/sub.css
@@ -360,3 +360,7 @@ body,#wrap{width:100%;height:100%}
 	padding-left: 0.75em;
 }
 
+
+.sub_slide_wrap_champ .swiper-container{
+	overflow: hidden;
+}
