--- a/m/css/sub.css
+++ b/m/css/sub.css
@@ -40,7 +40,11 @@ html,body{height:100%;}
 .sub_user_flow{padding-top:1.5rem}
 .sub_cont{margin-top:5rem}
 .sub_cont h3{text-align: center;font-weight:bold;font-size:21px;margin-bottom:2rem}
-.sub_cont .movie_wrap{width:90%;margin:0 auto;min-height:19.5rem;text-align: center;}
+.sub_cont .movie_wrap{width:90%;margin:0 auto;height:19.5rem;text-align: center;}
+.sub_cont .movie_wrap img{
+    height: 100%;
+}
+.swiper-horizontal{overflow: hidden;}
 .sub_cont .practice_info_wrap{margin-top:4rem;padding:0 1.5rem;overflow:hidden}
 .sub_cont .practice_info_wrap dl{overflow: hidden;margin-bottom:1.5rem}
 .sub_cont .practice_info_wrap dl:last-child{margin-bottom:0}
