--- a/css/sub.css
+++ b/css/sub.css
@@ -129,7 +129,7 @@ body,#wrap{width:100%;height:100%}
 /* faq */
 .cont_length{border-bottom:2px solid #000;padding-bottom:10px;font-size:23px;font-weight:bold;float:left;}
 .marketing_wrap{width:1200px;margin:0 auto;clear:both;}
-.marketing{float:left;width:31%;margin:50px 27px 50px 0;border:1px solid #dcdcdc;background:white;overflow: hidden;cursor:pointer;box-sizing: border-box;-moz-box-sizing: border-box;-webkit-box-sizing: border-box;-o-box-sizing: border-box;}
+.marketing{float:left;width:31%;margin:50px 27px 50px 0;border:1px solid #dcdcdc;background:white;overflow: hidden;cursor:pointer;}
 .marketing:last-child{margin-right:0;}
 .marketing img{width:378px}
 .marketing_info_text{margin-top:40px;margin-left:20px;margin-bottom:40px}
